--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,17 @@
 services:
+  keycloak:
+    image: quay.io/keycloak/keycloak:23.0.4
+    container_name: keycloak
+    ports:
+      - "7080:8080"
+    environment:
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "admin"
+    command: "start-dev"
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   read:
     image: grafana/loki:2.9.2
     command: "-config.file=/etc/loki/config.yaml -target=read"
@@ -199,7 +212,7 @@ services:
 
 
   configserver:
-    image: "qzy111/configserver:v11"
+    image: "qzy111/configserver:v12"
     container_name: ms-configserver
     ports:
       - "8071:8071"
@@ -216,7 +229,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "qzy111/eurekaserver:v11"
+    image: "qzy111/eurekaserver:v12"
     container_name: ms-eurekaserver
     ports:
       - "8070:8070"
@@ -234,10 +247,8 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   accounts:
-    image: "qzy111/accounts:v11"
+    image: "qzy111/accounts:v12"
     container_name: ms-accounts
-    ports:
-      - "8080:8080"
     healthcheck:
       test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
       interval: 20s
@@ -252,10 +263,8 @@ services:
       service: microservice-eureka-config
 
   loans:
-    image: "qzy111/loans:v11"
+    image: "qzy111/loans:v12"
     container_name: ms-loans
-    ports:
-      - "8090:8090"
     healthcheck:
       test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
       interval: 20s
@@ -270,10 +279,8 @@ services:
       service: microservice-eureka-config
 
   cards:
-    image: "qzy111/cards:v11"
+    image: "qzy111/cards:v12"
     container_name: ms-cards
-    ports:
-      - "9000:9000"
     healthcheck:
       test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
       interval: 20s
@@ -288,7 +295,7 @@ services:
       service: microservice-eureka-config
 
   gatewayserver:
-    image: "qzy111/gatewayserver:v11"
+    image: "qzy111/gatewayserver:v12"
     container_name: ms-gatewayserver
     ports:
       - "8072:8072"
@@ -302,6 +309,7 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
       OTEL_SERVICE_NAME: "gatewayserver"
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: "http://keycloak:8080/realms/master/protocol/openid-connect/certs"
     extends:
       file: common-config.yml
       service: microservice-eureka-config
