--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -95,6 +95,14 @@
 			<version>2.3.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.eazy</groupId>
 			<artifactId>core</artifactId>
 			<version>1.0.0</version>
@@ -131,7 +139,7 @@
 				<version>3.4.0</version>
 				<configuration>
 					<to>
-						<image>qzy111/${project.name}:v12</image>
+						<image>qzy111/${project.name}:v13</image>
 					</to>
 				</configuration>
 			</plugin>
