--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>accounts</module>
 		<module>cards</module>
 		<module>loans</module>
+		<module>message</module>
 
 	</modules>
 </project>
