--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,20 @@
 services:
+  rabbit:
+    image: rabbitmq:3.12-management
+    hostname: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: rabbitmq-diagnostic check_port_connectivity
+      interval: 20s
+      timeout: 20s
+      retries: 10
+      start_period: 20s
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   keycloak:
     image: quay.io/keycloak/keycloak:23.0.4
     container_name: keycloak
@@ -212,7 +228,7 @@ services:
 
 
   configserver:
-    image: "qzy111/configserver:v12"
+    image: "qzy111/configserver:v13"
     container_name: ms-configserver
     ports:
       - "8071:8071"
@@ -229,7 +245,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "qzy111/eurekaserver:v12"
+    image: "qzy111/eurekaserver:v13"
     container_name: ms-eurekaserver
     ports:
       - "8070:8070"
@@ -247,7 +263,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   accounts:
-    image: "qzy111/accounts:v12"
+    image: "qzy111/accounts:v13"
     container_name: ms-accounts
     healthcheck:
       test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
@@ -255,15 +271,19 @@ services:
       timeout: 20s
       retries: 20
       start_period: 10s
+    depends_on:
+      rabbit:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
       OTEL_SERVICE_NAME: "accounts"
+      SPRING_RABBITMQ_HOST: "rabbit"
     extends:
       file: common-config.yml
       service: microservice-eureka-config
 
   loans:
-    image: "qzy111/loans:v12"
+    image: "qzy111/loans:v13"
     container_name: ms-loans
     healthcheck:
       test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
@@ -279,7 +299,7 @@ services:
       service: microservice-eureka-config
 
   cards:
-    image: "qzy111/cards:v12"
+    image: "qzy111/cards:v13"
     container_name: ms-cards
     healthcheck:
       test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
@@ -295,7 +315,7 @@ services:
       service: microservice-eureka-config
 
   gatewayserver:
-    image: "qzy111/gatewayserver:v12"
+    image: "qzy111/gatewayserver:v13"
     container_name: ms-gatewayserver
     ports:
       - "8072:8072"
